--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,48 @@
 body {
-    background: black;
+    font: 1em sans-serif;
+    width: 200px;
+    padding: 0;
+    margin: 0;
+}
+
+p * {
+    display: block;
+}
+
+input[type=email] {
+    -webkit-appearance: none;
+    appearance: none;
+
+    width: 100%;
+    border: 1px solid #333;
+    margin: 90%;
+
+    box-sizing: border-box;
+}
+
+/* This is our style for the invalid fields */
+input:invalid {
+    border-color: #900;
+    background-color: #FDD;
+}
+
+input:focus:invalid {
+    outline: none;
+}
+
+/* This is the style of our error messages */
+.error {
+    width: 100%;
+    padding: 0;
+
+    font-size: 80%;
+    color: white;
+    background-color: #900;
+    border-radius: 0 0 5px 5px;
+
+    box-sizing: border-box;
+}
+
+.error.active {
+    padding: .3em;
 }
